--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sanity/client": "^6.10.0"
+		"@sanity/client": "^6.10.0",
+		"@sanity/vision": "^3.23.4",
+		"sanity": "^3.23.4"
 	}
 }
