--- a/package.json
+++ b/package.json
@@ -38,5 +38,11 @@
 		"@sanity/client": "^6.10.0",
 		"@sanity/vision": "^3.23.4",
 		"sanity": "^3.23.4"
-	}
+	},
+	"enabledApiProposals": [
+		"contribCommentsViewThreadMenus",
+		"contribCommentThreadAdditionalMenu",
+		"contribSourceControlInputBoxMenu",
+		"contribDebugCreateConfiguration"
+	]
 }
