--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
 	"dependencies": {
 		"@sanity/client": "^6.10.0",
 		"@sanity/vision": "^3.23.4",
+		"@supabase/supabase-js": "^2.47.10",
+		"dotenv": "^16.4.7",
 		"sanity": "^3.23.4"
 	},
 	"enabledApiProposals": [
