--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 		"@sanity/vision": "^3.23.4",
 		"@supabase/supabase-js": "^2.47.10",
 		"dotenv": "^16.4.7",
-		"sanity": "^3.23.4"
+		"sanity": "^3.23.4",
+		"svelte-french-toast": "^1.2.0"
 	},
 	"enabledApiProposals": [
 		"contribCommentsViewThreadMenus",
