--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@supabase/supabase-js": "^2.47.10",
 		"dotenv": "^16.4.7",
 		"sanity": "^3.23.4",
+		"sitemap": "^8.0.0",
 		"svelte-french-toast": "^1.2.0"
 	},
 	"enabledApiProposals": [
