--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 PUBLIC_SUPABASE_URL=YOUR_SUPABASE_URL
 PUBLIC_SUPABASE_ANON_KEY=YOUR_SUPABASE_KEY
 ADMIN_PASSWORD=your-secure-password
+SMTP_USER=sourceEmail@example.com
+SMTP_PASS=here-your-email-password
+MAIL_DESTINATION=destinationMail@example.com
